--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.74 2000/02/22 23:29:32 danny Exp $
+dnl $Id: configure.in,v 1.75 2000/03/03 07:52:40 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -294,7 +294,7 @@ AC_TYPE_SIGNAL
 AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
-AC_CHECK_FUNCS(putenv strcasecmp strerror)
+AC_CHECK_FUNCS(putenv strcasecmp strerror getcwd)
 AM_FUNC_MKTIME
 AM_FUNC_OBSTACK
 
