--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.78 2000/07/03 19:28:34 danny Exp $
+dnl $Id: configure.in,v 1.79 2000/07/08 15:22:35 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.99.11])
+AM_INIT_AUTOMAKE([oleo], [1.99.12])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -271,7 +271,10 @@ fi
 dnl
 dnl GNU GSL (GNU Scientific Library)
 dnl
-AC_CHECK_LIB(gsl, gsl_error)
+AC_CHECK_LIB(gsl, gsl_error,
+	LIBS="$LIBS -lgsl -lgslblasnative"
+	AC_DEFINE(HAVE_GSL),,
+	-lgslblasnative)
 
 dnl
 dnl MySQL client library ?
