--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.80 2000/07/22 06:13:15 danny Exp $
+dnl $Id: configure.in,v 1.81 2000/07/22 06:16:27 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -276,7 +276,12 @@ dnl End Xbase support lines
 dnl
 if test "$CXX" != "no"; then
   AC_CHECK_LIB(xbase, main)
-  AM_CONDITIONAL(HaveXbase, test x$ac_cv_lib_xbase_main = xyes)
+  if test x$ac_cv_lib_xbase_main = xno; then
+    AC_CHECK_LIB(xdb, main)
+    AM_CONDITIONAL(HaveXbase, test x$ac_cv_lib_xdb_main = xyes)
+  else
+    AM_CONDITIONAL(HaveXbase, test x$ac_cv_lib_xbase_main = xyes)
+  fi
 else
   AM_CONDITIONAL(HaveXbase, false)
 fi
