--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.81 2000/07/22 06:16:27 danny Exp $
+dnl $Id: configure.in,v 1.82 2000/07/25 12:56:32 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -217,19 +217,6 @@ if test x$ac_cv_lib_sciplot_sp_begin_plot = xyes; then
 	AC_DEFINE(HAVE_LIBSCIPLOT)
 fi
 
-AC_ARG_WITH(gnuplot,
-[ --with-gnuplot       Oleo graphing calls gnuplot. Deprecated & only if no plotutils.],
-[  case "${withval}" in
-     y | ye | yes)	usegnuplot=yes ;;
-     n | no      )	usegnuplot=no ;;
-     * )                usegnuplot=yes ;;
-   esac],
-[  usegnuplot=yes])
-
-if test $usegnuplot = yes; then
-	AC_DEFINE(WITH_GNUPLOT)
-fi
-
 dnl Checks for Guile
 dnl AC_CHECK_LIB(guile, scm_boot_guile)
 
@@ -275,6 +262,8 @@ dnl
 dnl End Xbase support lines
 dnl
 if test "$CXX" != "no"; then
+  AC_LANG_SAVE
+  AC_LANG_CPLUSPLUS
   AC_CHECK_LIB(xbase, main)
   if test x$ac_cv_lib_xbase_main = xno; then
     AC_CHECK_LIB(xdb, main)
@@ -282,6 +271,7 @@ if test "$CXX" != "no"; then
   else
     AM_CONDITIONAL(HaveXbase, test x$ac_cv_lib_xbase_main = xyes)
   fi
+  AC_LANG_RESTORE
 else
   AM_CONDITIONAL(HaveXbase, false)
 fi
