--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@ _$*
 *.ln
 core
 # CVS default ignores end
+mkinstalldirs
+missing
+INSTALL
+COPYING
+configure
+oleobug
+oleo.spec
+oleo-*.tar.gz
+Makefile.in
+Makefile
+aclocal.m4
