--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.34 2000/07/03 16:33:01 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.35 2000/11/25 10:02:04 danny Exp $
 #
 AUTOMAKE_OPTIONS = gnu 1.4 readme-alpha
 ACLOCAL_AMFLAGS = -I m4
@@ -25,6 +25,8 @@ release:	oleo-$(VERSION).tar.gz
 	rcp oleo-$(VERSION).tar.gz gnudist.gnu.org:/home/ftp/gnu/oleo/oleo-$(VERSION).tar.gz
 	rcp ChangeLog gnudist.gnu.org:/home/www/html/software/oleo/ChangeLog
 	rcp TODO gnudist.gnu.org:/home/www/html/software/oleo/TODO
+	rcp doc/oleo.html gnudist.gnu.org:/home/www/html/software/oleo/doc/oleo.html
+	rcp doc/oleo1.png gnudist.gnu.org:/home/www/html/software/oleo/doc/oleo1.png
 
 #
 # This can be used to put the files in place for alpha releases.
