--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.84 2000/11/22 19:33:00 danny Exp $
+dnl $Id: configure.in,v 1.85 2000/11/25 10:02:04 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.99.14])
+AM_INIT_AUTOMAKE([oleo], [1.99.15])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -327,7 +327,7 @@ dnl
 dnl This used to cause all kinds of problems in an earlier revision
 dnl	of oleo. (Mostly because of using earlier auto* tools.)
 dnl
-AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)
+dnl AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)
 
 dnl
 dnl Pass information about where we install to the source, to be
