--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.86 2001/02/07 02:07:44 pw Exp $
+dnl $Id: configure.in,v 1.87 2001/02/07 03:13:30 pw Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -136,63 +136,68 @@ AC_PATH_XTRA
 dnl There are cases where motif may be installed on a system, but X may not
 dnl be (Default on hppa1.1-hp-hpux10.20) therefor this this must all be wrapped
 if test "$no_x" = ""; then 
- dnl
- dnl Add link to X11
- dnl	This is only for the non-motif case.
- dnl
- AC_LINK_X
+    dnl
+    dnl Motif (LessTif)
+    dnl
+    AC_ARG_WITH(motif,
+	[  --without-motif              do not use Motif, even if detected],
+	[		case "${withval}" in
+	    y | ye | yes )	usemotif=yes ;;
+	    n | no )		usemotif=no ;;
+	    * )			usemotif=yes ;;
+	    esac],
+	[		with_motif=yes])
 
- dnl
- dnl Motif (LessTif)
- dnl
- AC_ARG_WITH(motif,
- [  --without-motif		  Do not use Motif, even if detected],
- [		case "${withval}" in
- 		  y | ye | yes )	usemotif=yes ;;
- 		  n | no )		usemotif=no ;;
- 		  * )			usemotif=yes ;;
- 		esac],
- [		with_motif=yes])
+    dnl
+    dnl If you ask not to have Xbae then you can't have Motif either.
+    dnl And the other way around.
+    dnl
+    dnl To make sure people know about this, we'll be harsh and abort.
+    dnl
+    if test "$with_Xbae" = "no" -a "$with_motif" = "yes" ; then
+	AC_MSG_ERROR(Cannot build Motif/LessTif interface without Xbae)
+    fi
+    if test "$with_Xbae" = "yes" -a "$with_motif" = "no" ; then
+	AC_MSG_ERROR(Cannot use Xbae without Motif/LessTif)
+    fi
  
- dnl
- dnl If you ask not to have Xbae then you can't have Motif either.
- dnl And the other way around.
- dnl
- dnl To make sure people know about this, we'll be harsh and abort.
- dnl
- if test "$with_Xbae" = "no" -a "$with_motif" = "yes" ; then
- 	AC_MSG_ERROR(Cannot build Motif/LessTif interface without Xbae)
- fi
- if test "$with_Xbae" = "yes" -a "$with_motif" = "no" ; then
- 	AC_MSG_ERROR(Cannot use Xbae without Motif/LessTif)
- fi
- 
- dnl
- dnl Just in case I misunderstood something - make sure nothing slips through.
- dnl
- test "$with_Xbae" = "no" && with_motif="no"
- test "$with_motif" = "no" && with_Xbae="no"
- 
- dnl
- dnl Checks for Motif
- dnl These should not happen if --without-motif has been used.
- dnl
- if test "$with_motif" = "yes"; then
-   AC_FIND_MOTIF
-   ICE_FIND_Xbae
-   ICE_FIND_XmHTML
-   AC_FIND_XLT
-   if test "x$XLT_LIBS" != "x"; then
-     CFLAGS="$XLT_CFLAGS $MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
-     LIBS="$XLT_LIBS $MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 -lXext $X_EXTRA_LIBS $LIBS"
-     AC_DEFINE(HAVE_SciPlot_H)
-   else
-     ICE_FIND_SciPlot
-     CFLAGS="$MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
-     LIBS="$MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 $X_EXTRA_LIBS $LIBS"
-   fi
-   AC_CHECK_LIB(Xpm, main)
- fi
+    dnl
+    dnl Checks for Motif
+    dnl These should not happen if --without-motif has been used.
+    dnl
+    if test "$with_motif" = "yes"; then
+	AC_FIND_MOTIF
+    fi
+    if test "$with_motif" = "yes"; then
+	ICE_FIND_Xbae
+	if test "$with_xbae" = "no" ; then
+	    AC_MSG_ERROR(
+	      [Xbae not found; you must install it or use "--without-motif"])
+	    with_motif=no
+	fi
+    fi
+    if test "$with_motif" = "yes"; then
+	ICE_FIND_XmHTML
+	AC_FIND_XLT
+	if test "x$XLT_LIBS" != "x"; then
+	    CFLAGS="$XLT_CFLAGS $MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
+	    LIBS="$XLT_LIBS $MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 -lXext $X_EXTRA_LIBS $LIBS"
+	    AC_DEFINE(HAVE_SciPlot_H)
+	else
+	    ICE_FIND_SciPlot
+	    CFLAGS="$MOTIF_CFLAGS $X_CFLAGS $CFLAGS"
+	    LIBS="$MOTIF_LIBS $X_LIBS $X_PRE_LIBS -lXt -lX11 $X_EXTRA_LIBS $LIBS"
+	fi
+	AC_CHECK_LIB(Xpm, main)
+    fi
+    if test "$with_motif" = "no"; then
+	dnl
+	dnl Add link to X11
+	dnl	This is only for the non-motif case.
+	dnl
+	with_x=yes
+	AC_LINK_X
+    fi
 fi dnl "$no_x" = "yes"
 
 dnl
@@ -222,7 +227,7 @@ dnl AC_CHECK_LIB(guile, scm_boot_guile)
 
 dnl Checks if -DDEBUG is requested
 AC_ARG_WITH(debug,
-[  --with-debug                   Send debugging info to stderr],
+[  --with-debug                 Send debugging info to stderr],
 [              case "${withval}" in
                  y | ye | yes )         usedebug=yes ;;
                  n | no )               usedebug=no ;;
