--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.8 2000/08/10 21:02:49 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.9 2001/02/08 00:21:23 pw Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
@@ -7,3 +7,6 @@ EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
 	q110399.csv loop.oleo formula.sylk paine.slk \
 	create_koers.txt data.sql mysql.oleo \
 	docs.oleo
+
+MAINTAINERCLEANFILES = Makefile.in
+
