--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,8 +1,11 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.10 2000/02/22 23:44:18 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.11 2001/02/08 00:21:23 pw Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
 EXTRA_DIST = gettext.m4 lcmessage.m4 progtest.m4 \
 		x11.m4 \
 		motif.m4 sciplot.m4 xmhtml.m4 cxx.m4
+
+MAINTAINERCLEANFILES = Makefile.in
+
