--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/doc/Makefile.am,v 1.14 2001/02/08 00:21:23 pw Exp $
+# $Header: /home/matt/cvs/oleo/oleo/doc/Makefile.am,v 1.15 2001/02/14 20:54:49 danny Exp $
 #
 # Process this file with automake to produce Makefile.in
 #
@@ -21,8 +21,8 @@ if HavePerl
 htmldir=	$(prefix)/share/oleo
 html_DATA=	oleo.html
 
-oleo.html:	$(srcdir)/oleo.texi ${TEXIS} $(srcdir)/texi2html
-		@HAVE_PERL@ $(srcdir)/texi2html $(srcdir)/oleo.texi
+oleo.html:	$(srcdir)/oleo.texi ${TEXIS} $(top_builddir)/doc/texi2html
+		@HAVE_PERL@ $(top_builddir)/doc/texi2html $(srcdir)/oleo.texi
 endif
 
 DISTCLEANFILES = $(html_DATA)
