--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.91 2001/07/10 11:22:06 danny Exp $
+dnl $Id: configure.in,v 1.92 2001/07/23 09:56:43 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -91,7 +91,7 @@ AM_C_PROTOTYPES
 dnl
 dnl Checks for libraries.
 dnl
-AC_CHECK_LIB(ncurses, waddch, ,
+AC_CHECK_LIB(ncurses, waddch, LIBS="$LIBS -lncurses",
 	AC_CHECK_LIB(curses, addch, ,
 		AC_CHECK_LIB(termlib, tgetent, ,
 			AC_CHECK_LIB(termcap, tgetent))))
