--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl This is the configuration file for GNU oleo.
 dnl
-dnl $Id: configure.in,v 1.93 2001/08/31 09:12:52 danny Exp $
+dnl $Id: configure.in,v 1.94 2005/08/03 19:04:54 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -12,7 +12,7 @@ dnl Need to be processed with Autoconf >= 2.13
 dnl
 AC_PREREQ(2.13)
 
-AM_INIT_AUTOMAKE([oleo], [1.99.16])
+AM_INIT_AUTOMAKE([oleo], [1.99.80])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -27,9 +27,10 @@ dnl    fi
 AM_MAINTAINER_MODE
 
 dnl Define available languages
-ALL_LINGUAS="en nl fr"
+dnl This is supposedly obsolete.
+dnl ALL_LINGUAS="en nl fr"
 
-AC_ARG_PROGRAM
+dnl AC_ARG_PROGRAM
 AM_CONFIG_HEADER(config.h)
 
 dnl
@@ -298,8 +299,9 @@ AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
 AC_CHECK_FUNCS(putenv strcasecmp strerror getcwd rename)
+AC_CHECK_FUNCS(stpcpy)
 AC_FUNC_MKTIME
-AM_FUNC_OBSTACK
+dnl AM_FUNC_OBSTACK
 
 dnl
 dnl CUPS is the Common UNIX Printing System
@@ -335,13 +337,12 @@ fi
 
 dnl See if we're GNU Gettext friendly
 dnl
-AM_GNU_GETTEXT
+AM_GNU_GETTEXT([external])
 
 dnl
 dnl This used to cause all kinds of problems in an earlier revision
 dnl	of oleo. (Mostly because of using earlier auto* tools.)
 dnl
-dnl AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)
 
 dnl
 dnl Pass information about where we install to the source, to be
@@ -359,7 +360,7 @@ dnl
 dnl
 dnl
 
-AC_SUBST(LIBOBJS)
+dnl AC_SUBST(LIBOBJS)
 
 AC_SUBST(include_motif)
 AC_SUBST(link_motif)
@@ -370,4 +371,4 @@ AC_SUBST(link_xmhtml)
 AC_SUBST(include_sciplot)
 AC_SUBST(link_sciplot)
 
-AC_OUTPUT([Makefile oleobug doc/Makefile doc/texi2html lib/Makefile src/Makefile intl/Makefile m4/Makefile po/Makefile.in Xresources/Makefile examples/Makefile oleo.spec afm/Makefile],[sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
+AC_OUTPUT([Makefile oleobug doc/Makefile doc/texi2html lib/Makefile src/Makefile m4/Makefile po/Makefile.in Xresources/Makefile examples/Makefile oleo.spec afm/Makefile ],[])
