disabling gettext until it is fully implemented in oleo in order to maintain a buildable repository

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,14 +3,14 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.40 2005/08/03 19:13:15 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.41 2011/07/05 05:46:39 delqn Exp $
 #
 AUTOMAKE_OPTIONS = gnu 1.4 readme-alpha
 ACLOCAL_AMFLAGS = -I m4
 
 D=	`date +%G%m%d.%H%M%S`
 
-SUBDIRS = doc lib src m4 po Xresources examples afm
+SUBDIRS = doc lib src m4 Xresources examples afm #po
 
 # Remove this file here (it is created via configure), not from within intl.
 # DISTCLEANFILES = intl/libintl.h
