Make autoreconf and Xprint searching work in 2024.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,7 @@
 
 localedir = $(prefix)/share/locale
 
-AUTOMAKE_OPTIONS = ../lib/ansi2knr dejagnu
+AUTOMAKE_OPTIONS = dejagnu
 
 EXTRA_DIST=	xbase.cpp oleo_xb.h mysql.c parse.h gpl.sed
 CLEANFILES = parse.c parse.h posixtm.c posixtm.h
