--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,7 +6,13 @@
 EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
 	q110399.csv loop.oleo formula.sylk paine.slk \
 	create_koers.txt data.sql mysql.oleo \
-	docs.oleo
+	docs.oleo \
+	C-locale.oleo constants.oleo exam.oleo gods.oleo localebug.oleo \
+	nonls.oleo physconsts.oleo piechart.oleo quadplot.oleo test1.oleo \
+	test2.oleo testfr.oleo testlocalefr.oleo yuck.oleo barchart.oleo \
+	bigcol.oleo copied_regions.oleo diago.oleo exponents.oleo formats.oleo \
+	gods_iso8859-1.oleo bessjtest.oleo barchart2.oleo barchart3.oleo \
+	barchart4.oleo eaux.oleo lambw.oleo student.oleo
 
 MAINTAINERCLEANFILES = Makefile.in
 
